--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -98,7 +98,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="Turn",Scale=-1.000000,Key=Gamepad_LeftX)
-+AxisMappings=(AxisName="RotateTurret",Scale=1.000000,Key=Gamepad_FaceButton_Left)
++AxisMappings=(AxisName="RotateTurret",Scale=1.000000,Key=Gamepad_RightX)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
